--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Hello World 2021'
+name: 'Hello World 2021 NodeJS'
 description: 'Greet someone and record the time'
 inputs:
   who-to-greet:  # id of input
